@@ -1,3 +1,10 @@
+ode (2.5.3-5)
+
+  * move to git where modified files are stored directly
+    in the upstream folder.
+
+ -- Marmalade Package Team <packages@ideaworkslabs.com>  Fri, 10 Jun 2011
+
 ode (2.5.3-4)
 
   * add no-vc6 option
